--- a/templates/register.html
+++ b/templates/register.html
@@ -2,35 +2,36 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<title>注册</title>
-	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-	<link href="./static/css/mui.css" rel="stylesheet" />
-	<script src="./static/js/mui.min.js"></script>
+    <meta charset="utf-8">
+    <title>注册</title>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link href="./static/css/mui.css" rel="stylesheet"/>
+    <script src="./static/js/mui.min.js"></script>
 </head>
 
 <body>
-	<header class="mui-bar mui-bar-nav">
-		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		<h1 class="mui-title">注册</h1>
-	</header>
-	<div class="mui-content">
-		<form class="mui-input-group">
-			<div class="mui-input-row">
-				<label>用户名</label>
-				<input type="text" class="mui-input-clear" placeholder="请输入用户名" id="username">
-			</div>
-			<div class="mui-input-row">
-				<label>密码</label>
-				<input type="password" class="mui-input-password" placeholder="请输入密码" id="pwd">
-			</div>
-			<div class="mui-button-row">
-				<button type="button" class="mui-btn mui-btn-primary" id="register">确认注册</button>
-			</div>
-		</form>
-	</div>
+<header class="mui-bar mui-bar-nav">
+    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+    <h1 class="mui-title">注册</h1>
+</header>
+<div class="mui-content">
+    <form class="mui-input-group">
+        <div class="mui-input-row">
+            <label>用户名</label>
+            <input type="text" class="mui-input-clear" placeholder="请输入用户名" id="username">
+        </div>
+        <div class="mui-input-row">
+            <label>密码</label>
+            <input type="password" class="mui-input-password" placeholder="请输入密码" id="pwd">
+        </div>
+        <div class="mui-button-row">
+            <button type="button" class="mui-btn mui-btn-primary" id="register">确认注册</button>
+        </div>
+    </form>
+</div>
 
-	<script>
+<script>
 		        document.addEventListener('DOMContentLoaded', function() {
 					document.getElementById('register').addEventListener('click', function() {
 				console.log("first")
@@ -59,7 +60,8 @@
 				});
 			})
 				});
-	</script>
+
+</script>
 </body>
 
 </html>
