--- a/templates/main.html
+++ b/templates/main.html
@@ -13,18 +13,17 @@
 </header>
 <div class="mui-content">
 	{% for article in articles %}
-	<div class="mui-card">
+	<div class="mui-card" data-id="{{ article.id }}">
 		<!--页眉,放置作者信息、发表时间-->
 		<div class="mui-card-header mui-card-media">
 			<img src="../images/logo.png" />
 			<div class="mui-media-body">
 				{{ article.author.username }}
-				<p>发表于 {{ article.create_time }}</p>
+				<p>发表于 {{ article.create_time.strftime('%Y-%m-%d %H:%M:%S') }}</p>
 			</div>
 		</div>
 		<!--内容区-->
 		<div class="mui-card-content">
-			<div class="article-title">{{ article.title }}</div>
 			<span class="article-content">{{ article.content }}</span>
 		</div>
 		<div class="mui-card-footer">
@@ -32,5 +31,16 @@
 		</div>
 	</div>
 	{% endfor %}
-
 	{% endblock %}
+	<script>
+		{% block js %}
+		mui('.mui-content').on('tap', '.mui-card', function () {
+			// 获取帖子的id
+			var article_id = this.getAttribute('data-id');
+			// 打开新的页面，并传递帖子的id作为参数
+			mui.openWindow({
+				url: '/article_detail/' + article_id
+			});
+		});
+		{% endblock %}
+	</script>
